# turtlebot4-people-avoidance

./: .gitignore  DEVELOPMENT_GUIDE.md  DOCKER.md  LICENSE  PRESETS.md  README.md  REAL_ROBOT.md  SETUP.md  SIMULATION.md  SIMULATION_SETUP.md  TURTLEBOT4_GUIDE.md  slalom_mission.py  test.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
notebooks/: Copy_of_2d_kalman_demo.ipynb  multi_target_nn_tracking.ipynb  pipeline_explanation.md
presentation/: presentation_1slide.md
src/pedestrian_sim/: package.xml  setup.cfg  setup.py
src/pedestrian_sim/launch/: pedestrian_sim.launch.py  simulation.launch.py
src/pedestrian_sim/pedestrian_sim/: pedestrian_sim_node.py
src/pedestrian_sim/worlds/: simple_room.sdf
src/people_avoidance/: README.md  package.xml  setup.py
src/people_avoidance/launch/: people_avoidance.launch.py
src/people_avoidance/people_avoidance/: controller.py  leg_detection.py  people_avoidance_node.py  tracking.py  tracking_2.py
